swager logic, modefied user logic
